--- a/guides.html
+++ b/guides.html
@@ -59,30 +59,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     </noscript>
 
-    <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- Ad Modal Overlay -->
-    <div id="adModal" class="ad-modal">
-        <div class="ad-modal-content">
-            <div class="ad-modal-header">
-                <h3>잠시만요! 광고를 시청해주세요</h3>
-                <span class="ad-timer" id="adTimer">5</span>
-            </div>
-            <!-- AdSense 광고 영역 -->
-            <div class="ad-container">
-                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-                    data-ad-slot="XXXXXXXXXX" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            </div>
-            <button id="closeAdModal" class="close-ad-btn" style="display: none;">
-                <i class="fas fa-times"></i>
-                광고 닫기
-            </button>
-        </div>
-    </div>
 
     <!-- Header -->
     <header class="header">
@@ -548,22 +527,10 @@
     <!-- JavaScript -->
     <script src="script.js"></script>
     <script>
-        // 전면 광고 모달 표시
+        // 페이지 초기화
         document.addEventListener('DOMContentLoaded', function () {
-            // showAdModal 함수가 정의되어 있는지 확인 후 호출
-            if (typeof window.showAdModal === 'function') {
-                window.showAdModal();
-            }
-
             // 가이드 탭 기능 초기화
             initGuideNavigation();
-
-            // AdSense 초기화 (DOM 로드 후)
-            try {
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            } catch (e) {
-                console.log('AdSense 초기화 오류:', e);
-            }
         });
 
         // 가이드 내비게이션 초기화
