--- a/affordability-calculator.html
+++ b/affordability-calculator.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="주택구매력 계산기 - 소득과 자금을 기반으로 구매 가능한 주택 가격을 정확하게 계산하세요. 대출한도와 자기자금 포함">
     <meta name="keywords" content="주택구매력 계산기, 집 살 돈 계산기, 주택 구매 가능 금액, 부동산 구매력, 무료 계산기">
