--- a/brokerage-calculator.html
+++ b/brokerage-calculator.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="중개수수료 계산기 - 부동산 거래 시 중개사에 지불하는 중개수수료를 정확하게 계산하세요. 주택, 아파트, 상가별 수수료율">
     <meta name="keywords" content="중개수수료 계산기, 부동산 중개수수료, 공인중개사 수수료, 부동산 거래 비용, 무료 계산기">
