--- a/guides.html
+++ b/guides.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
     
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="금융계산기 이용가이드 - 대출, 부동산세금, 예적금, 중도상환 등 각 계산기의 정확한 사용법과 금융 용어 설명">
     <meta name="keywords" content="금융계산기 사용법, 대출계산기 가이드, 부동산세금 계산법, 예적금 계산법, 이용가이드">
