--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="정확하고 신뢰할 수 있는 금융계산기 - 대출이자, 부동산세금, 예적금, 양도소득세, 중도상환 등 9가지 전문 계산기 무료 제공">
