--- a/investment-calculator.html
+++ b/investment-calculator.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="투자수익 계산기 - 주식, 펀드, 예금 등 다양한 투자 상품의 수익률과 복리 효과를 정확하게 계산하세요">
     <meta name="keywords" content="투자수익 계산기, 복리 계산기, 투자 수익률, 주식 수익률, 펀드 수익률, 투자 시뮬레이션, 무료 계산기">
