--- a/jeonse-calculator.html
+++ b/jeonse-calculator.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="전월세 계산기 - 전세와 월세를 서로 변환하여 비교하세요. 최적의 임차 조건을 찾아 합리적인 주거비 계획">
     <meta name="keywords" content="전월세 계산기, 전세 월세 변환, 전세금 계산기, 월세 계산기, 임대료 비교, 무료 계산기">
