--- a/loan-calculator.html
+++ b/loan-calculator.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="대출 이자 계산기 - 원리금균등, 원금균등 상환방식별 월 상환액과 총 이자를 정확하게 계산하세요. 무료 대출 계산기">
