--- a/loan-limit.html
+++ b/loan-limit.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="대출한도 계산기 - DSR, LTV 기준으로 대출 가능 한도를 정확하게 계산하세요. 주택담보대출, 신용대출 한도 계산">
     <meta name="keywords" content="대출한도 계산기, DSR 계산기, LTV 계산기, 주택담보대출 한도, 신용대출 한도, 무료 계산기">
