--- a/prepayment-calculator.html
+++ b/prepayment-calculator.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <meta name="description" content="중도상환 계산기 - 대출 중도상환 수수료와 이자 절약 효과를 정확하게 계산하세요. 중도상환 시점과 금액별 손익 분석">
     <meta name="keywords" content="중도상환 계산기, 대출 중도상환, 중도상환 수수료, 이자 절약, 대출 조기상환, 무료 계산기">
     <meta name="author" content="금융계산기">
