--- a/realestate-tax.html
+++ b/realestate-tax.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="부동산 세금 계산기 - 취득세, 등록세, 양도소득세를 정확하게 계산하세요. 부동산 거래 시 필요한 모든 세금을 한번에 계산">
     <meta name="keywords" content="부동산 세금 계산기, 취득세, 등록세, 양도소득세, 부동산 세금, 무료 계산기, 부동산 거래">
