--- a/savings-calculator.html
+++ b/savings-calculator.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="예적금 계산기 - 예금, 적금, 복리 이자를 정확하게 계산하세요. 만기 수령액과 세후 이자를 한번에 계산">
     <meta name="keywords" content="예적금 계산기, 예금 계산기, 적금 계산기, 복리 계산기, 이자 계산, 만기 수령액, 무료 계산기">
