--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
     
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+         crossorigin="anonymous"></script>
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="금융계산기 소개 - 정확하고 신뢰할 수 있는 금융 계산 서비스, 9가지 전문 계산기로 복잡한 금융 계산을 쉽고 빠르게">
     <meta name="keywords" content="금융계산기 소개, 대출계산기, 부동산세금계산기, 예적금계산기, 신뢰할 수 있는 금융계산">
