--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
-    
+
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
-         crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="정확하고 신뢰할 수 있는 금융계산기 - 대출이자, 부동산세금, 예적금, 양도소득세, 중도상환 등 9가지 전문 계산기 무료 제공">
@@ -197,6 +197,15 @@
                 </button>
             </div>
         </div>
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+            crossorigin="anonymous"></script>
+        <!-- middle_calculators -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5809883478660758"
+            data-ad-slot="9416832110" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <div class="hero-visual">
             <div class="calculator-preview">
                 <div class="calculator-screen">
@@ -1271,6 +1280,15 @@
                 <p>PC, 모바일, 태블릿 등 어떤 기기에서도 편리하게 이용 가능합니다</p>
             </div>
         </div>
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+            crossorigin="anonymous"></script>
+        <!-- middle_calculators -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5809883478660758"
+            data-ad-slot="9416832110" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </section>
 
     <footer class="footer">
