--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
     
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -213,6 +213,18 @@
         </div>
     </section>
 
+    <!-- 디스플레이 광고 -->
+    <div class="display-ad-container">
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+            crossorigin="anonymous"></script>
+        <!-- middle_calculators -->
+        <ins class="adsbygoogle display-ad" style="display:block" data-ad-client="ca-pub-5809883478660758"
+            data-ad-slot="9416832110" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
