--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
                     사용법 보기
                 </button>
             </div>
-        </div>
-        
-        <!-- 디스플레이 광고 -->
-        <div class="display-ad-container">
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
-                crossorigin="anonymous"></script>
-            <!-- middle_calculators -->
-            <ins class="adsbygoogle display-ad" style="display:block" data-ad-client="ca-pub-5809883478660758"
-                data-ad-slot="9416832110" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+
+            <!-- 디스플레이 광고 -->
+            <div class="display-ad-container small">
+                <script async
+                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+                    crossorigin="anonymous"></script>
+                <!-- middle_calculators -->
+                <ins class="adsbygoogle display-ad" style="display:block" data-ad-client="ca-pub-5809883478660758"
+                    data-ad-slot="9416832110" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </div>
         
         <div class="hero-visual">
