--- a/guides.html
+++ b/guides.html
@@ -504,6 +504,19 @@
              data-full-width-responsive="true"></ins>
     </div>
 
+    <!-- 하단 디스플레이 광고 -->
+    <div class="display-ad-container">
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+            crossorigin="anonymous"></script>
+        <!-- middle_calculators -->
+        <ins class="adsbygoogle display-ad" style="display:block" data-ad-client="ca-pub-5809883478660758"
+            data-ad-slot="9416832110" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
