--- a/guides.html
+++ b/guides.html
@@ -78,16 +78,6 @@
         </nav>
     </header>
 
-    <!-- Top Ad Banner -->
-    <div class="ad-banner top-banner">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5809883478660758"
-             data-ad-slot="XXXXXXXXXX"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-    </div>
-
     <!-- User Guide Section -->
     <section class="user-guide-page">
         <div class="section-header">
@@ -100,7 +90,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-5809883478660758"
-                 data-ad-slot="XXXXXXXXXX"
+                 data-ad-slot="9416832110"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
         </div>
@@ -134,7 +124,7 @@
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-5809883478660758"
-                             data-ad-slot="XXXXXXXXXX"
+                             data-ad-slot="9416832110"
                              data-ad-format="auto"
                              data-full-width-responsive="true"></ins>
                     </div>
@@ -224,7 +214,7 @@
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-5809883478660758"
-                             data-ad-slot="XXXXXXXXXX"
+                             data-ad-slot="9416832110"
                              data-ad-format="auto"
                              data-full-width-responsive="true"></ins>
                     </div>
@@ -315,7 +305,7 @@
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-5809883478660758"
-                             data-ad-slot="XXXXXXXXXX"
+                             data-ad-slot="9416832110"
                              data-ad-format="auto"
                              data-full-width-responsive="true"></ins>
                     </div>
@@ -444,7 +434,7 @@
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-5809883478660758"
-                             data-ad-slot="XXXXXXXXXX"
+                             data-ad-slot="9416832110"
                              data-ad-format="auto"
                              data-full-width-responsive="true"></ins>
                     </div>
@@ -488,7 +478,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-5809883478660758"
-                 data-ad-slot="XXXXXXXXXX"
+                 data-ad-slot="9416832110"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
         </div>
@@ -499,7 +489,7 @@
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-5809883478660758"
-             data-ad-slot="XXXXXXXXXX"
+             data-ad-slot="9416832110"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
     </div>
