--- a/guides.html
+++ b/guides.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0">
     
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js?client=ca-pub-5809883478660758"
-         crossorigin="anonymous"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
          crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-5809883478660758">
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="금융계산기 이용가이드 - 대출, 부동산세금, 예적금, 중도상환 등 각 계산기의 정확한 사용법과 금융 용어 설명">
