--- a/about.html
+++ b/about.html
@@ -164,51 +164,51 @@
         <div class="service-features">
             <h2>제공하는 계산기</h2>
             <div class="features-grid-3col">
-                <div class="feature-item">
+                <a href="loan-calculator.html" class="feature-item">
                     <i class="fas fa-home"></i>
                     <h4>대출 이자 계산기</h4>
                     <p>원리금균등, 원금균등 상환방식별 정확한 이자 계산으로 월 상환액과 총 이자를 한눈에 확인</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="realestate-tax.html" class="feature-item">
                     <i class="fas fa-building"></i>
                     <h4>부동산 세금 계산기</h4>
                     <p>취득세, 양도소득세 등 부동산 관련 세금을 정확하게 계산하여 투자 계획 수립에 도움</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="savings-calculator.html" class="feature-item">
                     <i class="fas fa-piggy-bank"></i>
                     <h4>예적금 계산기</h4>
                     <p>예금, 적금의 만기 수령액과 세후 이자를 계산하여 최적의 저축 상품 선택 지원</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="brokerage-calculator.html" class="feature-item">
                     <i class="fas fa-handshake"></i>
                     <h4>중개수수료 계산기</h4>
                     <p>부동산 매매, 임대 시 중개수수료를 정확히 계산하여 거래 비용 미리 확인</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="loan-limit.html" class="feature-item">
                     <i class="fas fa-chart-bar"></i>
                     <h4>대출한도 계산기</h4>
                     <p>DSR, LTV 기준으로 최대 대출 가능 금액을 계산하여 안전한 대출 계획 수립</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="affordability-calculator.html" class="feature-item">
                     <i class="fas fa-house-user"></i>
                     <h4>주택구매력 계산기</h4>
                     <p>월 소득 기준으로 구매 가능한 주택 가격을 계산하여 현실적인 내 집 마련 계획</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="jeonse-calculator.html" class="feature-item">
                     <i class="fas fa-exchange-alt"></i>
                     <h4>전월세 전환율 계산기</h4>
                     <p>전세와 월세 간의 전환율을 비교 분석하여 최적의 주거 형태 선택 지원</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="prepayment-calculator.html" class="feature-item">
                     <i class="fas fa-money-bill-wave"></i>
                     <h4>중도상환 수수료 계산기</h4>
                     <p>대출 중도상환 시 수수료와 절약 효과를 분석하여 최적의 상환 시점 결정</p>
-                </div>
-                <div class="feature-item">
+                </a>
+                <a href="investment-calculator.html" class="feature-item">
                     <i class="fas fa-house-damage"></i>
                     <h4>보유세 계산기</h4>
                     <p>재산세와 종합부동산세를 계산하여 부동산 보유에 따른 연간 세금 부담 예측</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -239,7 +239,6 @@
                     <a href="index.html">홈</a>
                     <a href="guides.html">이용가이드</a>
                     <a href="about.html">소개</a>
-                    <a href="#contact">문의하기</a>
                     <a href="#" onclick="openFeedbackModal(); return false;" class="feedback-link">
                         <i class="fas fa-comment"></i>
                         피드백하기
