--- a/guides.html
+++ b/guides.html
@@ -8,6 +8,14 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
         crossorigin="anonymous"></script>
+    
+    <!-- Google AdSense Auto Ads Script -->
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-5809883478660758",
+            enable_page_level_ads: true
+        });
+    </script>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="금융계산기 이용가이드 - 대출, 부동산세금, 예적금, 중도상환 등 각 계산기의 정확한 사용법과 금융 용어 설명">
@@ -66,6 +74,36 @@
 </head>
 
 <body>
+
+    <!-- Left Sidebar Ad -->
+    <div class="sidebar-ad left-sidebar">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+            crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-5809883478660758"
+            data-ad-slot="7891234567"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
+    <!-- Right Sidebar Ad -->
+    <div class="sidebar-ad right-sidebar">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5809883478660758"
+            crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-5809883478660758"
+            data-ad-slot="1234567890"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 
     <!-- Header -->
     <header class="header">
@@ -494,15 +532,6 @@
             // 가이드 탭 기능 초기화
             initGuideNavigation();
 
-            // AdSense automatic ads initialization
-            try {
-                (adsbygoogle = window.adsbygoogle || []).push({
-                    google_ad_client: "ca-pub-5809883478660758",
-                    enable_page_level_ads: true
-                });
-            } catch (e) {
-                console.log('AdSense initialization error:', e);
-            }
         });
 
         // 가이드 내비게이션 초기화
