--- a/prepayment-calculator.html
+++ b/prepayment-calculator.html
@@ -60,12 +60,12 @@
     <link rel="apple-touch-icon" sizes="180x180"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💸</text></svg>">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H25YCX68S3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX', {
+        gtag('config', 'G-H25YCX68S3', {
             page_title: document.title,
             page_location: window.location.href
         });
